--- a/site.css
+++ b/site.css
@@ -2,10 +2,15 @@ html {
     box-sizing: border-box
 }
 body {background-color: rgb(239, 239, 241);
-    font-family: 'Arimo', sans-serif;
-}
-h1 h2 h3 {
     font-family: 'Roboto', sans-serif;
+}
+h2 h3 {
+    font-family: 'Lalezar', cursive;
+}
+.title {
+    font-weight: bolder;
+    font-family: 'Lalezar', cursive;
+    background-color: rgba(114, 101, 101, 0.158)
 }
 .topimg {
     background-image: url("underbridge.jpg");
